# flightmare_ws

.catkin_tools/profiles/default/: build.yaml
devel/: .catkin
devel/lib/autopilot/: autopilot
devel/lib/flightros/: camera  flight_pilot_node  racing
devel/lib/manual_flight_assistant/: manual_flight_assistant
devel/lib/pkgconfig/: autopilot.pc  catkin_simple.pc  eigen_catkin.pc  flightlib.pc  flightrender.pc  flightros.pc  manual_flight_assistant.pc  mav_msgs.pc  mav_planning_msgs.pc  mav_state_machine_msgs.pc  mav_system_msgs.pc  polynomial_trajectories.pc  position_controller.pc  quad_launch_files.pc  quadrotor_common.pc  quadrotor_msgs.pc  rotors_comm.pc  rotors_control.pc  rotors_description.pc  rotors_evaluation.pc  rotors_gazebo.pc  rotors_gazebo_plugins.pc  rotors_hil_interface.pc  rotors_joy_interface.pc  rpg_mpc.pc  rpg_quadrotor_integration_test.pc  rpg_rotors_interface.pc  rpg_single_board_io.pc  rqt_quad_gui.pc  rqt_rotors.pc  sbus_bridge.pc  state_predictor.pc  trajectory_generation_helper.pc  vbat_thrust_calibration.pc
devel/lib/rotors_control/: lee_position_controller_node  roll_pitch_yawrate_thrust_controller_node
devel/lib/rotors_gazebo/: hovering_example  waypoint_publisher  waypoint_publisher_file
devel/lib/rpg_mpc/: autopilot_mpc_instance  mpc_controller_node
devel/lib/rpg_rotors_interface/: rpg_rotors_interface
devel/lib/rpg_single_board_io/: gpio_interrupt_example  voltage_reader
devel/lib/sbus_bridge/: sbus_bridge
devel/share/autopilot/cmake/: autopilotConfig.cmake
devel/share/catkin_simple/cmake/: catkin_simple-extras.cmake  catkin_simpleConfig.cmake
devel/share/roseus/ros/mav_msgs/: manifest.l
logs/flightlib/: build.cmake.000.log.stderr  build.cmake.001.log.stderr
logs/rotors_control/: build.cmake.000.log.stderr
logs/rotors_gazebo/: build.cmake.000.log.stderr
logs/rotors_gazebo_plugins/: build.cmake.000.log.stderr  build.make.000.log.stderr
logs/rpg_mpc/: build.cmake.000.log.stderr  build.make.000.log.stderr
src/myprj_flightmare/: CMakeLists.txt
src/myprj_flightmare/src/: fmp_connection.cpp
(+56 files in other folders)
